타이틀 수정

--- a/src/main/resources/templates/boardWrite.html
+++ b/src/main/resources/templates/boardWrite.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>게시물 작성 폼</title>
+    <title>게시물 작성 폼 페이지</title>
 </head>
 <style>
     .layout {
